...
                                                <color key="backgroundColor" red="0.48535461749999997" green="0.69894136070000001" blue="0.92367187500000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="60" id="hss-d5-PIQ"/>
                                                </constraints>
                                                <color key="tintColor" red="0.48535461749801034" green="0.69894136067415857" blue="0.92367187500000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="filled" title="Continue with Phone" cornerStyle="capsule">
                                                    <color key="baseBackgroundColor" red="0.48627450980392156" green="0.69803921568627447" blue="0.92549019607843142" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                </buttonConfiguration>
                                                <connections>
                                                    <segue destination="WJq-0a-vwk" kind="show" id="2Gc-kj-wMW"/>
                                                </connections>
                                            </button>
...
                                    </textField>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="CcU-VS-KWN">
                                        <rect key="frame" x="32" y="265" width="338" height="50"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5RU-0O-SV0">
                                                <rect key="frame" x="100" y="0.0" width="138" height="50"/>
                                                <accessibility key="accessibilityConfiguration" identifier="getOtpButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="9gS-pm-uVy"/>
                                                </constraints>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="filled" title="Get OTP" cornerStyle="capsule">
                                                    <color key="baseBackgroundColor" red="0.48627450980392156" green="0.69803921568627447" blue="0.92549019607843142" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                            <constraint firstItem="4nu-Cr-ddb" firstAttribute="trailing" secondItem="7I6-2A-3af" secondAttribute="trailing" id="U89-Rn-rL3"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="0hO-Dw-AYb"/>
                    <connections>
                        <outlet property="getOtpButton" destination="5RU-0O-SV0" id="HgQ-FH-8Fo"/>
                        <outlet property="numberField" destination="K3I-aO-srs" id="yyn-dk-CaB"/>
                        <segue destination="n0H-7x-zTB" kind="show" identifier="otpSegue" id="8HV-rN-UnU"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Xjp-gM-zm0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                <exit id="nK0-xH-9pb" userLabel="Exit" sceneMemberID="exit"/>
            </objects>
...
